# django-multidb

./: README.md  pyproject.toml  requirements.txt
apps/authz/: apps.py  models.py
apps/authz/migrations/: 0001_initial.py  0002_alter_user_current_role_alter_user_roles.py  0003_alter_role_permissions.py  0004_alter_role_permissions.py  0005_alter_permission_options_alter_role_options_and_more.py  0006_remove_role_parent.py  0007_alter_permission_options_alter_role_options_and_more.py  0008_role_parent.py
apps/group/: apps.py  models.py
apps/order/: apps.py
apps/order/migrations/: 0001_initial.py
django_multidb/: routers.py
django_multidb/models/: base.py  deletion.py  query.py
django_multidb/models/fields/: rel.py
tests/: test_crud.py  test_router.py
utils/: __init__.py
